// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input field should render input field 1`] = `
<styled.div>
  <styled.input
    className="form-control"
    onChange={[MockFunction]}
    placeholder="Placeholder"
    type="text"
    value=""
  />
</styled.div>
`;

exports[`Input field should render input field with error 1`] = `
<styled.div>
  <styled.input
    className="form-control"
    errorMessage="Value cannot be empty"
    onChange={[MockFunction]}
    placeholder="Placeholder"
    type="text"
    value=""
  />
  <ErrorMessage
    message="Value cannot be empty"
  />
</styled.div>
`;
